pg_pv/prometheus/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-prometheus
spec:
  rules:
  - host: my-prometheus
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-service
          servicePort: 9090
